[tool.poetry]
name = "dsapi"
version = "0.1.0"
description = ""
authors = ["Sam C. <samrocksc@gmail.com>"]
readme = "README.md"
packages = [{include = "dsapi"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
flask = "^2.3.2"
autopep8 = "^2.0.2"
pyright = "^1.1.323"
marshmallow = "^3.20.1"
rope = "^1.9.0"
marshmallow-generic = "^1.0.1"
typing-extensions = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
