[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sam Clark <samrocksc@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
flask = "^2.3.2"
autopep8 = "^2.0.2"
pyright = "^1.1.322"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
